force-app/main/default/objects/Team_Weekly_Allocation__c/Team_Weekly_Allocation__c.object-meta.xml
<CustomObject>
    <label>Team Weekly Allocation</label>
    <nameField>
        <displayFormat>TWA-{0000}</displayFormat>
        <label>TWA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Weekly Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>