force-app/main/default/objects/Team_Weekly_Allocation__c/fields/Contracted_Days__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Days__c</fullName>
    <inlineHelpText>Raise N&apos;GO contracted days of work.</inlineHelpText>
    <label>Contracted (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>