force-app/main/default/objects/Team_Weekly_Allocation__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <inlineHelpText>By default, please use the standard phases: 1) Project planning and solution design; 2) Development; 3) Final tests and activation; 4) Training, documentation and closure.</inlineHelpText>
    <label>Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>