force-app/main/default/objects/Team_Weekly_Allocation__c/fields/PM_LoE_Days__c.field-meta.xml
<CustomField>
    <fullName>PM_LoE_Days__c</fullName>
    <inlineHelpText>The expected Level of Effort (LoE) from your Project Manager in each phase. In case of need, your PM can invite other team member to participate in the process.</inlineHelpText>
    <label>Your PM LoE (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>