force-app/main/default/objects/Team_Weekly_Allocation__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Team Weekly Allocations</relationshipLabel>
    <relationshipName>Team_Weekly_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>