force-app/main/default/objects/Team_Weekly_Allocation__c/fields/TaskRay_Team__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskRay Team</label>
    <referenceTo>TASKRAY__trContributor__c</referenceTo>
    <relationshipName>Allocations_per_week</relationshipName>
    <type>Lookup</type>
</CustomField>