force-app/main/default/objects/Team_Weekly_Allocation__c/fields/User_Expected_Allocation__c.field-meta.xml
<CustomField>
    <fullName>User_Expected_Allocation__c</fullName>
    <formula>TaskRay_Team__r.TASKRAY__User__r.Weekly_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Expected Allocation</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>