force-app/main/default/objects/Team_Weekly_Allocation__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>TaskRay_Team__r.TASKRAY__User__r.FirstName &amp;&quot; &quot;&amp;  TaskRay_Team__r.TASKRAY__User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>