force-app/main/default/objects/Team_Weekly_Allocation__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If validated by the Delivery Team Manager.</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>