force-app/main/default/objects/Team_Weekly_Allocation__c/listViews/Aprova_o_Twa.listView-meta.xml
<ListView>
    <fullName>Aprova_o_Twa</fullName>
    <columns>NAME</columns>
    <columns>TaskRay_Project__c</columns>
    <columns>TaskRay_Team__c</columns>
    <columns>Validated__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Aprovação Twa</label>
</ListView>